--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 a {
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
 a:hover {
-  color: #e24d55;
+  color: #F8A50B ;
   text-decoration: none;
 }
 
@@ -45,13 +45,13 @@ h1, h2, h3, h4, h5, h6 {
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background: #d9232d;
+  background: #F8A50B ;
   color: #fff;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
-  background: #e1444d;
+  background: #F8A50B ;
   color: #fff;
 }
 
@@ -128,7 +128,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
 .nav-menu .drop-down ul {
@@ -165,7 +165,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
 .nav-menu .drop-down > a:after {
@@ -211,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Get Startet Button */
 .get-started-btn {
   margin-left: 25px;
-  background: #d9232d;
+  background: #F8A50B ;
   color: #fff;
   border-radius: 4px;
   padding: 8px 30px 9px 30px;
@@ -222,7 +222,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .get-started-btn:hover {
-  background: #e1444d;
+  background: #F8A50B ;
   color: #fff;
 }
 
@@ -285,7 +285,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #d9232d;
+  color: #F8A50B ;
   text-decoration: none;
 }
 
@@ -468,7 +468,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #d9232d;
+  background: #F8A50B ;
 }
 
 #hero .btn-get-started {
@@ -484,11 +484,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  background: #d9232d;
+  background: #c7850b;
 }
 
 #hero .btn-get-started:hover {
-  background: #df3740;
+  background: #F8A50B ;
 }
 
 @media (max-width: 992px) {
@@ -627,18 +627,20 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about .content h2 {
+.about h2{
   font-weight: 700;
   font-size: 48px;
   line-height: 60px;
   margin-bottom: 20px;
   text-transform: uppercase;
+  text-align: center;
 }
 
-.about .content h3 {
+.about h3 {
   font-weight: 500;
   line-height: 32px;
   font-size: 24px;
+  text-align: center;
 }
 
 .about .content ul {
@@ -656,7 +658,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
 .about .content p:last-child {
@@ -697,11 +699,12 @@ section {
   margin-bottom: 20px;
   padding: 30px;
   border-radius: 6px;
+  height: 200px;
 }
 
 .services .icon-box i {
   float: left;
-  color: #d9232d;
+  color: #F8A50B ;
   font-size: 40px;
 }
 
@@ -724,10 +727,22 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
+/* dinsos */
+#dinsos {
+  background: #063A69;
+}
+
+#dinsos .section-title p {
+  color: #fff;
+}
+
+/* dinsos */
 /*--------------------------------------------------------------
+
+
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
@@ -757,7 +772,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #d9232d;
+  background: #F8A50B ;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -934,7 +949,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #d9232d;
+  background: #F8A50B ;
 }
 
 .team .member .social a + a {
@@ -999,12 +1014,12 @@ section {
 }
 
 .features .nav-link:hover {
-  color: #d9232d;
+  color: #F8A50B ;
 }
 
 .features .nav-link.active {
-  color: #d9232d;
-  border-color: #d9232d;
+  color: #F8A50B ;
+  border-color: #F8A50B ;
 }
 
 .features .tab-pane.active {
@@ -1034,7 +1049,7 @@ section {
   }
   .features .nav-link.active {
     color: #fff;
-    background: #d9232d;
+    background: #F8A50B ;
   }
 }
 
@@ -1063,7 +1078,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #d9232d;
+  color: #F8A50B ;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1095,7 +1110,7 @@ section {
 }
 
 .pricing ul i {
-  color: #d9232d;
+  color: #F8A50B ;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1113,7 +1128,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #d9232d;
+  background: #F8A50B ;
   display: inline-block;
   padding: 8px 35px 9px 35px;
   border-radius: 4px;
@@ -1127,12 +1142,12 @@ section {
 }
 
 .pricing .btn-buy:hover {
-  background: #e1444d;
+  background: #F8A50B ;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #d9232d;
+  background: #F8A50B ;
 }
 
 .pricing .advanced {
@@ -1144,7 +1159,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #d9232d;
+  background: #F8A50B ;
   color: #fff;
 }
 
@@ -1242,6 +1257,10 @@ section {
   background: #fff;
 }
 
+#contact .info {
+
+}
+
 .contact .info i {
   font-size: 20px;
   color: #556270;
@@ -1254,6 +1273,7 @@ section {
   align-items: center;
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
+  
 }
 
 .contact .info h4 {
@@ -1291,7 +1311,7 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: red;
+  color: #F8A50B ;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -1300,7 +1320,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #F8A50B;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1347,7 +1367,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #d9232d;
+  border-color: #F8A50B;
 }
 
 .contact .php-email-form input {
@@ -1359,7 +1379,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #d9232d;
+  background: #F8A50B;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1368,7 +1388,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #e24d55;
+  background: #F8A50B;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1413,7 +1433,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #d9232d !important;
+  background-color: #F8A50B !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1454,7 +1474,7 @@ section {
   padding: 40px 0 40px 0;
 }
 
-.blog img {
+.entry-img img{
   float: left;
   width: 100%;
   height: 300px;
@@ -1489,7 +1509,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #d9232d;
+  color: #F8A50B;
 }
 
 .blog .entry .entry-meta {
@@ -1526,7 +1546,7 @@ section {
   font-size: 15px;
 }
 
-.entry-content p{
+#blog .entry-content p{
 
   text-align: left;
   /* margin: 10px; */
@@ -1544,7 +1564,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #d9232d;
+  background: #F8A50B;
   color: #fff;
   padding: 6px 20px 7px;
   transition: 0.3s;
@@ -1624,7 +1644,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #d9232d;
+  color: #F8A50B\;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1734,7 +1754,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #d9232d;
+  color: #F8A50B\;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1807,7 +1827,7 @@ section {
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
-  background-color: #d9232d;
+  background-color: #F8A50B;
 }
 
 .blog .blog-pagination {
@@ -1837,8 +1857,8 @@ section {
 }
 
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #d9232d;
-  border: 1px solid #d9232d;
+  background: #F8A50B;
+  border: 1px solid #F8A50B;
 }
 
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
@@ -1923,7 +1943,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #d9232d;
+  color: #F8A50B\;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1947,13 +1967,23 @@ section {
   font-weight: bold;
 }
 
+#blog-single .sidebar .recent-posts h4 {
+  text-align: left;
+  /* margin: 10px; */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color:black;
+}
+
 .blog .sidebar .recent-posts h4 a {
   color: #292f36;
   transition: 0.3s;
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #d9232d;
+  color: #F8A50B\;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1990,8 +2020,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #d9232d;
-  background: #d9232d;
+  border: 1px solid #F8A50B\;
+  background: #F8A50B\;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2220,7 +2250,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #d9232d;
+  background: #F8A50B\;
   color: #fff;
   text-decoration: none;
 }
@@ -2294,7 +2324,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px 2px 20px;
-  background: #d9232d;
+  background: #F8A50B\;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
